# valuation_engine

./: .dockerignore  .gitignore  API_PARAMETER_GUIDE.md  CI_CD_SETUP.md  Dockerfile.backend  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  README.md  TECHNICAL_DOCUMENTATION.md  WEB_APP_README.md  app.py  cache.py  config.py  docker-compose.yml  drivers.py  env.example  logging_config.py  main.py  montecarlo.py  multiples.py  params.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run-docker.sh  run_tests.py  sample_comps.csv  sample_inputs.txt  scenario.py  sensitivity.py  services.py  setup.py  start_app.py  test_imports.py  test_valuation.py  validate_core.py  validation.py  valuation.ipynb  valuation.py
.github/workflows/: badges.yml  ci.yml  python-tests.yml  test.yml
api/: main.py  requirements.txt
backend/: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  run.py  test_api.py  test_swagger.py
backend/api/: __init__.py
backend/app/: __init__.py  swagger.py
backend/app/api/: valuation.py
backend/app/services/: valuation_service.py
backend/app/static/: swagger.json
backend/config/: __init__.py
backend/core/: __init__.py
backend/core/financial/: __init__.py  drivers.py  wacc.py
backend/core/models/: __init__.py  params.py
backend/core/valuation/: __init__.py  dcf.py  monte_carlo.py  multiples.py  scenario.py  sensitivity.py
backend/services/: __init__.py  valuation_service.py
backend/tests/: test_valuation_service.py
backend/utils/: cache.py  exceptions.py  validation.py
data/: __init__.py  sample_comps.csv  sample_inputs.txt
finance_core/: ANALYSIS_REQUIREMENTS.md  DEBUGGER_README.md  README.md  SUMMARY_OF_DIFFERENCES.md  TechCorp_Inc._Valuation_Report.csv  dcf.py  debug_valuation.py  drivers.py  finance_calculator.py  input_validator.py  main.py  monte_carlo.py  multiples.py  params.py  pyproject.toml  requirements.txt  sample_input.json  sample_input_debug_report.json  sample_input_valuation_results.json  sensitivity.py  test_finance_calculator.py  valuation_input.csv  valuation_input_complete.csv
financial-valuation-app/: .gitignore  ANALYSIS_SELECTION_FIX.md  DEPLOYMENT_SUMMARY.md  README.md  TESTING_RESULTS.md  docker-compose.yml  quick-start.sh  run_tests.sh
financial-valuation-app/.github/workflows/: test.yml
financial-valuation-app/backend/: Dockerfile  FIX1_DEVELOPER_SUMMARY.md  FIX2_MONTE_CARLO_RUNS.md  README.md  app.py  celerybeat-schedule  env.example  pyproject.toml  requirements.txt  swagger.py  test_swagger.py
financial-valuation-app/backend/app/: __init__.py  config.py  models.py
financial-valuation-app/backend/app/api/: analysis.py  csv.py  results.py  valuation.py
financial-valuation-app/backend/app/services/: celery_service.py  finance_core_service.py  finance_core_service_fixed.py
financial-valuation-app/backend/finance_core/: ALL_FIXES_DOCUMENTATION.md  README.md  __init__.py  csv_to_json_converter.py  dcf.py  error_messages.py  finance_calculator.py  main.py  monte_carlo.py  multiples.py  output_validation.json  params.py  pyproject.toml  sample_input.json  sample_input_results.json  sample_input_valuation_results.json  scenario.py  sensitivity.py  test_csv_to_json_converter.py  test_finance_calculator.py  test_main.py  test_output.json  test_sample_input.py  wacc.py
financial-valuation-app/backend/static/: swagger.json
financial-valuation-app/backend/tests/: test_api_local_parity.py  test_app.py  test_app_simple.py  test_endpoints_minimal.py  test_finance_core.py
financial-valuation-app/deploy/: README.md  deploy.sh  ec2-setup.sh  production.env  validate-deployment.sh
financial-valuation-app/frontend/: DESIGN_SYSTEM.md  Dockerfile  UI_UX_MODERNIZATION_SUMMARY.md  env.example  package-lock.json  package.json  tailwind.config.js
financial-valuation-app/frontend/public/: index.html
financial-valuation-app/frontend/src/: App.js  index.css
financial-valuation-app/frontend/src/components/: CSVUpload.js  Charts.js  Layout.js  LoadingSkeleton.js  ModernFormInput.js  StatusMessage.js
financial-valuation-app/frontend/src/pages/: AnalysisSelection.js  InputForm.js  Results.js
financial-valuation-app/frontend/src/services/: api.js
financial-valuation-app/frontend/src/utils/: analysisConfig.js
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css  theme.js
frontend/src/components/: Footer.js  Header.js  LoadingSpinner.js  Results.js  ValuationForm.js
frontend/src/components/form/: AdvancedAnalysis.js  AnalysisSelection.js  FinancialProjections.js  ValuationAssumptions.js
frontend/src/constants/: index.js
frontend/src/hooks/: useApi.js  useFormValidation.js
frontend/src/utils/: index.js
scripts/: build.sh  start.sh  test.sh
test/: params.py  test_basic.py  test_imports.py  test_improvements.py  valuation.ipynb
