[tool.poetry]
name = "financial-valuation-engine"
version = "2.0.0"
description = "A comprehensive financial valuation platform with advanced DCF modeling, Monte Carlo simulations, sensitivity analysis, and scenario modeling"
authors = ["Pranay Upreti <upreti.pranay@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
pydantic = ">=2.0.0"
pandas = ">=1.5.0"
numpy = ">=1.21.0"
scipy = ">=1.9.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=22.0.0"
flake8 = ">=5.0.0"
mypy = ">=1.0.0"
pre-commit = ">=2.20.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-asyncio = ">=0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 